Update CSS to prevent landing page 'partner' images from stretching. Fix navbar.php to show correct number of items in basket.

--- a/assets/css/flickity.css
+++ b/assets/css/flickity.css
@@ -150,7 +150,7 @@ https://flickity.metafizzy.co
 
 .carousel-cell {
   width: 33%;
-  height: 100%;
+  /* height: 100%; */
   margin-right: 10px;
   background: whitesmoke;
 }
@@ -167,7 +167,7 @@ https://flickity.metafizzy.co
 
 .carousel-cell-image {
   display: block;
-  height: 100%;
+  /* height: 100%; */
   margin: 0 auto;
   max-width: 100%;
   opacity: 01;
@@ -182,7 +182,7 @@ https://flickity.metafizzy.co
 
 
 .landing__carousel__cell{
-  height: 100%;
+  /* height: 100%; */
   background:transparent!important;
 }
 
